--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -19,7 +19,7 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: v2.tehartexch.com
+  host: v2.theartexch.com
 
 # Credentials for your image host.
 registry:
