Add .op/ directory to .gitignore to exclude 1Password CLI sensitive files
Prevents 1Password CLI session tokens, cache, and configuration files
from being committed to version control for security.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ dump.rdb
 # DMB scraper generated data
 /tools/dmb_scraper/setlists/*.json
 !/tools/dmb_scraper/setlists/sample_dmb_setlists.json
+
+# 1Password CLI directory (contains sensitive session/cache data)
+.op/
